fix search facet visibility, add link to search from dashboard, add link to dashboard from search

--- a/app/css/search.css
+++ b/app/css/search.css
@@ -2,6 +2,12 @@
   display: flex;
 }
 
+body > p:first-child {
+  margin: 0 0 -1rem 0.1rem;
+  position: relative;
+  z-index: 10;
+}
+
 fieldset {
   margin-top: 0.5rem;
   border: 1px solid black;
